@@ -1,3 +1,8 @@
+2011-11-07 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-05-81
+	* Save value of the parameter that is being edited when clicking 
+	  the Configuration tree. (bug75952).
+
 2011-11-03 Martin Grunewald <Martin.Grunewald@cern.ch>
 	* tag V01-05-80
 	* Allow direct renaming of Streams, incl. auto-update of OM label
